# rag_model_v3

./: README.md
backend/: DB.sql  notify_patch.py  pyproject.toml  test_run.py
backend/src/apis/: aiAgent.py
backend/src/models/: aiAgentNotify.py  alarm.py  model.py  notify.py
backend/src/utils/: fastset.py  rediscl.py  settings.py  websc.py
esg-sctotal/: .gitignore  DB.sql  compose.yml
esg-sctotal/backend/: engine.py  env.md  pyproject.toml  test_ai_agent.py  test_ai_alarm.py  test_local_pipeline.py
esg-sctotal/backend/src/apis/: aiAgent.py  alarm.py  auth.py  company.py
esg-sctotal/frontend/: index.html  package-lock.json  package.json  vite.config.js
esg-sctotal/frontend/src/: main.jsx
hf_pg/: README.md  create.ddl  db.py  esg_cross_integrity_audit_log.txt  inspect_excel.txt  main.py  mariadb_rag.py  pyproject.toml  rag_integrity_test_log.txt  settings.py  verify_chatbot.py
hf_pg/config/: settings.py
hf_pg/database/: mariadb_client.py  postgres_client.py
hf_pg/pipeline/: checklist_uploader.py  dataset_exporter.py  document_processor.py
hf_pg/search/: checklist_matcher.py  generator.py  hybrid_retriever.py
hf_pg/utils/: helpers.py
rag/: .gitignore  agentPipeline.py  checklist.py  db.py  dbClient.py  db_client.py  ddl.sql  engine .bak  engine.py  esgOntologyTemplate.jsonl  esg_cross_integrity_audit_log.txt  esg_ontology_template.jsonl  load.py  loadModifiedOntology.py  load_modified_ontology.py  main.bak  main.py  ontology.py  pyproject.toml  rag.py  settings.py  verify.py
rag/esgExcelFiles/: 자가진단_리스크_분류_기준.xlsx  협력사별_자가진단_체크리스트.xlsx
(+54 files in other folders)
