[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datetime>=6.0",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "jwcrypto>=1.5.7",
    "kafka-python>=2.3.1",
    "mariadb>=1.1.14",
    "pydantic>=2.13.4",
    "redis>=7.4.0",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]
